[FIX] web: fix the overlapping texts when adding coloumn from kanban
Before this commit, there is a overlapping text for 'add new column'
when we have horizontal scroll on the kanban view due to invalid
width on o_quick_create_unfolded class which was removed in recent
refactoring.

So in this commit, added the width on o_quick_create_unfolded so
if appears without overlapping.

task-2871552

--- a/addons/web/static/src/legacy/scss/kanban_view.scss
+++ b/addons/web/static/src/legacy/scss/kanban_view.scss
@@ -552,6 +552,7 @@
         .o_quick_create_unfolded {
             margin: $border-width ($o-kanban-inside-hgutter * .5) 0;
             padding: $o-kanban-inside-vgutter $o-kanban-inside-hgutter;
+            width: $o-kanban-small-record-width;
 
             @include media-breakpoint-down(md) {
                 margin: 0;
